[project]
name = "dbos-monitor"
version = "0.1.0"
description = "Open-source executor health monitoring and workflow re-assignment for DBOS-transact"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.0",
    "dbos>=1.3",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbos_monitor"]

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["W191", "E101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "integration: tests requiring Docker/Postgres",
]

[dependency-groups]
dev = [
    "dbos-monitor[dev]",
]
