# Virtual workspace root: groups the two distributable packages under packages/.
# It is not itself a published package — the client and service each have their own
# pyproject.toml so they can be installed independently with only their own deps.
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
dbos-monitor-client = { workspace = true }
dbos-monitor-service = { workspace = true }

[dependency-groups]
# Installed by `uv sync` for local development and tests across both packages.
dev = [
    "dbos-monitor-client[dbos]",
    "dbos-monitor-service",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.0",
    "dbos>=1.3",
    "ruff>=0.15",
]

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["W191", "E101"]

[tool.ruff.lint.isort]
# The virtual workspace root has no [project], so ruff can't auto-detect our own
# packages; list them so imports stay grouped separately from third-party.
known-first-party = ["dbos_monitor", "dbos_monitor_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "integration: tests requiring Docker/Postgres",
]
